<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/exercise_0"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/exercise_0"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/exercise_1"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/exercise_1"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/exercise_2"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/exercise_2"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/exercise_3"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/exercise_3"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/exercise_4"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/exercise_4"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/my_collect"
                android:background="@drawable/button_shape_mini"
                android:drawablePadding="-5sp"
                android:layout_marginRight="20dp"
                android:id="@+id/exercise_5"
                android:text="@string/exercise_5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/my_tarring"
                android:background="@drawable/button_shape_mini"
                android:drawablePadding="-5sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/exercise_6"
                android:text="@string/exercise_6" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/history_title"
                android:background="@drawable/button_shape_mini"
                android:drawablePadding="-5sp"
                android:layout_marginLeft="20dp"
                android:id="@+id/exercise_7"
                android:text="@string/exercise_7"/>
        </LinearLayout>

        <Button
            android:id="@+id/exercise_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/setting"
            android:background="@drawable/button_shape_setting"
            android:layout_marginTop="20dp"
            android:text="test"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>